chore: remove enable-preview